--- a/assets/config/option_workflow_download.yml
+++ b/assets/config/option_workflow_download.yml
@@ -25,3 +25,15 @@ plugin:
 #        level: album # 按照章节，一个章节一个压缩文件
 #        filename_rule: Atitle # 压缩文件的命名规则
 #        zip_dir: ${JM_ZIP_DIR} # 压缩文件存放的文件夹
+# 下载配置
+download:
+  cache: true # 如果要下载的文件在磁盘上已存在，不用再下一遍了吧？
+  image:
+    decode: true # JM的原图是混淆过的，要不要还原？
+    suffix: .jpg # 把图片都转为.jpg格式
+  threading:
+    # batch_count: 章节的批量下载图片线程数
+    # 数值大，下得快，配置要求高，对禁漫压力大
+    # 数值小，下得慢，配置要求低，对禁漫压力小
+    # PS: 禁漫网页一般是一次请求50张图
+    batch_count: 30
